--- a/01-fundamentals/src/css/index.css
+++ b/01-fundamentals/src/css/index.css
@@ -22,7 +22,6 @@ body {
 @media screen and (min-width: 768px) {
   .booklist {
     grid-template-columns: repeat(3, 1fr);
-    align-items: start;
   }
 }
 .book {
@@ -41,16 +40,8 @@ body {
 }
 
 .book h4 {
-  color: #617d98;
-  font-size: 0.75rem;
-  margin-top: 0.5rem;
+  color: '#617d98';
+  font-size: '0.75rem';
+  margin-top: '0.5rem';
   letter-spacing: 2px;
-}
-.book p {
-  margin: 1rem 0 0.5rem;
-}
-h1 {
-  text-align: center;
-  margin-top: 4rem;
-  text-transform: capitalize;
 }
